tests/fixtures/invalid/int_lshift_float.py
# Cannot left shift Int and Float
x: float = 1 << 1.0
